se corrige ruta de imagenes, css e iconos

--- a/produccionWeb/old/index.html
+++ b/produccionWeb/old/index.html
@@ -33,7 +33,7 @@
                         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="index.html"><img
-                                        src="public/iconos/libro-abierto.png" alt=""></a>
+                                        src="../public/iconos/libro-abierto.png" alt=""></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav__global__item"
@@ -48,10 +48,10 @@
                         </ul>
                         <ul class="navbar-nav mr-auto mb-2 mb-lg-0  nav__global__icons d-flex">
                             <li class="nav-item">
-                                <a class="nav-link" href="paginas/perfil/Perfil.html"><img src="public/iconos/usuario.png" alt=""></a>
+                                <a class="nav-link" href="paginas/perfil/Perfil.html"><img src="../public/iconos/usuario.png" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="paginas/carrito/Carrito.html"><img src="public/iconos/carrito-de-compras.png" alt=""></a>
+                                <a class="nav-link" href="paginas/carrito/Carrito.html"><img src="../public/iconos/carrito-de-compras.png" alt=""></a>
                             </li>
                         </ul>
                     </div>
@@ -73,7 +73,7 @@
                             <div class="card mb-3" style="max-width: 600px; min-width: 600px">
                                 <div class="row g-0">
                                     <div class="col-md-4 index__carousel__card__img">
-                                        <img src="public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                                        <img src="../public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -98,7 +98,7 @@
                             <div class="card mb-3" style="max-width: 600px; min-width: 600px">
                                 <div class="row g-0">
                                     <div class="col-md-4 index__carousel__card__img">
-                                        <img src="public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                                        <img src="../public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -123,7 +123,7 @@
                             <div class="card mb-3" style="max-width: 600px; min-width: 600px">
                                 <div class="row g-0">
                                     <div class="col-md-4 index__carousel__card__img">
-                                        <img src="public/imagenes/Libro3.jpg" class="img-fluid rounded-start" alt="...">
+                                        <img src="../public/imagenes/Libro3.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -170,7 +170,7 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="../public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
@@ -190,7 +190,7 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="../public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
@@ -205,28 +205,7 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
-                        <div class="card-body">
-                            <h5 class="card-title display-5 text-center">Nombre libro</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                                content.</p>
-                            <div class="d-flex justify-content-center ">
-                                <a href="" class="btn btn-warning">Ver
-                                    mas</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
-
-
-
-                <div class="d-flex justify-content-center index__article__section2__card">
-                    <div class="card" style="width: 20rem;">
-                        <img src="public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="../public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
@@ -244,9 +223,30 @@
 
 
 
+
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="../public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <div class="card-body">
+                            <h5 class="card-title display-5 text-center">Nombre libro</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <div class="d-flex justify-content-center ">
+                                <a href="" class="btn btn-warning">Ver
+                                    mas</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+                <div class="d-flex justify-content-center index__article__section2__card">
+                    <div class="card" style="width: 20rem;">
+                        <img src="../public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
@@ -261,7 +261,7 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="../public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
