--- a/produccionWeb/old/paginas/faq/FAQ.html
+++ b/produccionWeb/old/paginas/faq/FAQ.html
@@ -37,7 +37,7 @@
                         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="/produccionWeb/oldduccionWeb/old/index.html"><img
-                                    src="/iconos/libro-abierto.png" alt=""></a>
+                                        src="/iconos/libro-abierto.png" alt=""></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav__global__item"
@@ -65,7 +65,7 @@
 
     </header>
 
-    <h1 class="display-4 "> <img src="../../public/iconos/informacion.png" alt=""> Preguntas frecuentes </h1>
+    <h1 class="display-4 "> <img src="../../../public/iconos/informacion.png" alt=""> Preguntas frecuentes </h1>
 
     <article>
         <section>
