--- a/produccionWeb/old/paginas/historial-pedidos/HistorialPedidos.html
+++ b/produccionWeb/old/paginas/historial-pedidos/HistorialPedidos.html
@@ -33,7 +33,7 @@
                         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="/produccionWeb/oldduccionWeb/old/index.html"><img
-                                    src="/iconos/libro-abierto.png" alt=""></a>
+                                        src="/iconos/libro-abierto.png" alt=""></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav__global__item"
@@ -50,11 +50,11 @@
                         <ul class="navbar-nav mr-auto mb-2 mb-lg-0  nav__global__icons d-flex">
                             <li class="nav-item">
                                 <a class="nav-link" href="/produccionWeb/paginasionWeb/paginas/perfil/Perfil.html"><img
-                                    src="/iconos/usuario.png" alt=""></a>
+                                        src="/iconos/usuario.png" alt=""></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/produccionWeb/paginasionWeb/paginas/carrito/Carrito.html"><img
-                                    src="/iconos/carrito-de-compras.png" alt=""></a>
+                                        src="/iconos/carrito-de-compras.png" alt=""></a>
                             </li>
                         </ul>
                     </div>
@@ -72,7 +72,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="../../public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="../../../public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body productos__section__cards">
@@ -107,7 +107,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="../../public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="../../../public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body productos__section__cards">
@@ -143,7 +143,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="../../public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="../../../public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body productos__section__cards">
